--- a/src/index.css
+++ b/src/index.css
@@ -24,14 +24,14 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 2px;
   height: 8px;
   scroll-behavior: smooth;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  padding: 4px 4px 4px 4px;
+  padding: 2px 2px 2px 2px;
   margin: 0.4rem;
   background: #2a2c2d;
   border-radius: 5px;
